# riftdoc

./: tidy.sh
docs/: README.md
docs/examples/proof-of-concept/: 14-10-2025-Intentional-Fragility.md  19OCT2025-HRMC-Court-and-Tribunal-police.md  CMakeLists.txt  DIRECTION_PAGE_RANK_DISTRUBUTED_ALGO_FOR_MMUKO_CONNECT.md  DISCLAIMER.md  EXECTUTIVE_SUMMARY_ODTS.md  FermetPseudoHypothis.txt-X04102025.txt  Formalization of Directed Inst...apyand Pupptoe methdo protocol.txt  HMRC-Court-and-Tribunal-CHS-33624-19OCT2025.md  ISRGJAHSS4592024.md  Identity Anchoring Protocol - System Architecture.txt  Met Police Your call reference numb.txt  MmuoKò Connect - Technical Integration Document.md  Nnamdi_authentic_rant_on_philosphical_matters_22092025 (online-audio-converter.com) (1).rant.txt  Nnamdi_authentic_rant_on_philosphical_matters_22092025_English.txt  OBINexus HITL ↔ HOTL Bidirectional Vision Document.md  Puppet Method Protocol - Question for 14 OCtober 2025 for Specitifon Devlopment.md  README2.md  README2_WORKING_MEMORY.md  REFERENCE.md  _OBINexus Rebiirth The CHANGE stats with U  The Gatng fo BIZ aCESS.md  _OBINexus Rebiirth The CHANGE stats with U  The Gatng fo BIZ aCESS.txt  accessibility_error_system.txt  avatar-manifest.md  ballad_obinexus_updated.md  butterflies_battlefield_poem.md  civil_collapse_book.md  consciousness_presentation_toc.md  diram_presentation_outline.md  housing_crisis_05092025.txt  identitty-devlopment.txt  meson_options.txt  nexus-search-borken-artficats.txt  obinexus_manifesto_final.md  obinexus_sovereign_avatars_readme.md  obinexus_tidal_doc (1).md  obinexus_urls.txt  quarantine_log_20250622_155859.txt  ranting-16-10-2025.-housing act 1998txt.-housing act 1998txt.-housing act 1998txt.-housing act 1998txt.-housing act 1998.txt  requirements-dev.txt  (+2 more)
docs/rift-N/marked-down/: README.md
docs/stages/stage-0-tokenizer/: CMakeLists.txt  CTestCostData.txt  Definitions and Setup of OBINexus ODTS Frameowor for Kinemtic Princieple.md  MONDAY_VERDICT_ON_PLP_FRAMEWORK.md  OBINexus Formal Business Documentation Framework - README SPEC CLICK ME .md  dependency_analysis.txt  edge_case_registry.md  error.txt  final_setup.txt  link.txt  memory_governance_test_procedure.md  nlink.txt  perfect-dimension-visual.md  rift_project_index.txt
docs/stages/stage-1-parser/: CMakeCache.txt  CMakeLists.txt  edge_case_registry.md  nlink.txt
docs/stages/stage-2-ast/: BIDERECTIONAlLEARNING OBI AI TO OBIAI .md  BUILDTASK.md  Design choices  for Human In the Loop and Human On the Loop AntiCoherction and AntiBuracty Conscioness Persavion Framwowkr System Pipeline Cohereance.md  Force Budget Formula.md  HDIS as a Consumer-Observer Digital Nevous -System.md  Intentional Fragility as a Structural Principle.md  Neurodivergent-Friendly Framework.md  Nsibidi_Wokbook.md  OBINEXUS Public Pettion see SUMMARY REFERENCE.md  OBINexus Constitutional Housing Ecosystem - Tech.md  OBINexus Constitutional Housing Ecosystem - Technical Documentation V2.md  OBINexus IWU Constitution Framework.md  PHD ROADMAP.md  Phenomenological Identity - Referent Name Rotation System.md  Professional PhD Research Introduction Letter.md  QA_COMPLIANCE_REPORT.md  QUASI – Quantum Superpositional Infrastructure.md  REFERENCES.md  STATUS.md  Thurrock Develotuion WHITE Paper 16-10-2025 Saved .md  VERY_IMPORTANT.md  anticoercion_frameowrk_SAT13Sept2025.txt  cmake_utility_modules.txt  diram-tree.txt  directory_structure_report.md  docs.txt  gen_z_founder_promise.md  judicial-review-thurrock.md  oacs-rust-semver-spec.md  (+9 more)
docs/stages/stage-3-validator/: .riftrc.txt  CMakeLists.txt  CMakeRuleHashes.txt  HEART2BIRD.md  OBINexus -  Consciousness Preservation Ecosystem.md  Puppet Protocol Governor Model - Anticoercion.md  README (2).md  READMEOLD.md  README_QA_FRAMEWORK.md  TargetDirectories.txt  VISION.md  how-we-keep-identities.txt  linking_validation.txt  nlm_atlas_schema_ip.md  obinexus_semverx_strategy.md  obinexus_simplified_gating.md  phenomic_lensing_protocol.md  polic.txt  progressive_stage_test_procedure.md  risk_reward_contract.md  setup_validation.txt  status.txt
docs/stages/stage-4-bytecode/: CMakeLists.txt  backup_manifest.txt  consolidation_report.md  link.txt  rift0.txt
docs/stages/stage-6-emitter/: CMakeLists.txt  ONION - Hybrid Directed Instruction Messaging Protocol.md  hash_table_benchmark.md  kardonnoise.txt  obinexus-iwu-vision.md  obivox_formal_pipeline.txt  rift_project_index.txt  section-202-thurrock-demand.md
references/config_templates/: .riftrc.base  rift-0.pc.in
(+7 files in other folders)
